samples/_failures_safe/1761490131_bb8f6b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dbcf9bab.c: In function ‘main’:
./samples/SAFE/__tmp_dbcf9bab.c:155:13: error: expected declaration or statement at end of input
  155 |             case 2:
      |             ^~~~
./samples/SAFE/__tmp_dbcf9bab.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dbcf9bab.c:155:13: error: expected declaration or statement at end of input
